--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,22 @@
+// base
+@import 'base/_typography.scss';
+@import 'base/_variables.scss';
+// helpers
+@import 'helpers/_breakpoints.scss';
+@import 'helpers/_mixins.scss';
+// pages
+@import 'pages/_home.scss';
+@import 'pages/_slide.scss';
+@import 'pages/_footer.scss';
+@import 'pages/_header.scss';
+
 html,
 body {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +26,69 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+.container {
+  @include Container;
+}
+
+.container-Fluid {
+  @include Container-Fluid;
+}
+
+.alert {
+  display: block;
+  text-align: center;
+  border: 2px solid;
+  padding: 15px 10px;
+  margin: 25px auto;
+
+  text-align: center;
+  font: normal normal 600 18px/27px $font-poppins;
+  letter-spacing: 0px;
+  color: $color-pink;
+  opacity: 1;
+  width: max-content;
+  @include breakpoint(desktop) {
+    font-size: 17px;
+    line-height: 25px;
+  }
+  @include breakpoint(laptop) {
+    font-size: 16px;
+    line-height: 23px;
+  }
+  @include breakpoint(tablet) {
+    font-size: 15px;
+    line-height: 21px;
+  }
+  @include breakpoint(phone) {
+    font-size: 15px;
+    line-height: 21px;
+  }
+}
+
+/* scroll */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-blue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-blue;
+}
+
+/* scroll bar */
