--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@
 @import 'helpers/_breakpoints.scss';
 @import 'helpers/_mixins.scss';
 // pages
+@import 'pages/_video.scss';
 @import 'pages/_home.scss';
 @import 'pages/_slide.scss';
 @import 'pages/_footer.scss';
