--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -3,8 +3,7 @@
 ======================================*/
 
 header {
-  position: relative;
-  position: relative;
+  position: absolute;
   left: 0;
   top: 0;
   z-index: 9999;
